<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huebeiro.insuranceco.NewEventActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPlate1"
        android:hint="AAA"
        android:enabled="false"
        android:inputType="textCapCharacters"
        android:maxLength="3"
        android:maxLines="1"
        android:layout_alignBottom="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_licence_plate"
        android:id="@+id/textView7"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_event_info"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="-"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/txtPlate1"
        android:layout_toRightOf="@+id/txtPlate1"
        android:layout_toEndOf="@+id/txtPlate1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPlate2"
        android:inputType="number"
        android:hint="0000"
        android:enabled="false"
        android:maxLines="1"
        android:maxLength="4"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_date"
        android:id="@+id/textView10"
        android:layout_alignBottom="@+id/txtDate"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDate"
        android:enabled="false"
        android:layout_below="@+id/txtPlate1"
        android:layout_alignLeft="@+id/txtPlate1"
        android:layout_alignStart="@+id/txtPlate1"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/txtDate"
        android:layout_above="@+id/tableRow1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_related_cause"
                android:id="@+id/textView11"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_gravity="right"
                android:id="@+id/btnAddCause"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_add" />
        </TableRow>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/listCauses" />
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_attachments"
                android:id="@+id/textView2"/>

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:id="@+id/btnAddAttach"
                android:background="@color/colorPrimary"
                android:src="@drawable/ic_add" />
        </TableRow>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/listAttach" />
    </LinearLayout>
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_save"
            android:id="@+id/btnSave" />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:id="@+id/btnCancel" />
    </TableRow>

</RelativeLayout>
