<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.huebeiro.insuranceco.NewCarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_car_info"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_licence_plate"
        android:id="@+id/textView2"
        android:layout_marginLeft="35dp"
        android:layout_marginStart="35dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPlate1"
        android:hint="AAA"
        android:inputType="textCapCharacters"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:maxLength="3"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="-"
        android:id="@+id/textView3"
        android:layout_alignBottom="@+id/txtPlate1"
        android:layout_toRightOf="@+id/txtPlate1"
        android:layout_toEndOf="@+id/txtPlate1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPlate2"
        android:inputType="number"
        android:hint="0000"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:maxLines="1"
        android:maxLength="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_car_brand"
        android:id="@+id/textView4"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/txtPlate1"
        android:layout_alignStart="@+id/txtPlate1" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnBrand"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_car_model"
        android:id="@+id/textView5"
        android:layout_below="@+id/spnBrand"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/spnBrand"
        android:layout_alignStart="@+id/spnBrand" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnModel"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/spnBrand" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_car_model"
        android:id="@+id/textView6"
        android:layout_below="@+id/spnModel"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/spnBrand"
        android:layout_alignStart="@+id/spnBrand" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtYear"
        android:inputType="number"
        android:hint="0000"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:maxLength="4"
        android:maxLines="1" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_save"
            android:id="@+id/btnSave" />

        <Button
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_cancel"
            android:id="@+id/btnCancel" />
    </TableRow>


</RelativeLayout>
